--- a/continuous_integration/ubuntu-20.04/Dockerfile
+++ b/continuous_integration/ubuntu-20.04/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:20.04
 
-RUN echo "Acquire::http::Proxy \"http://helios10g.lan:3142\";" > /etc/apt/apt.conf.d/02proxy
+# RUN echo "Acquire::http::Proxy \"http://helios10g.lan:3142\";" > /etc/apt/apt.conf.d/02proxy
 
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get update && apt-get install -y \ 
 	tzdata               \ 
