--- a/.github/workflows/build_ci.yml
+++ b/.github/workflows/build_ci.yml
@@ -18,7 +18,8 @@ jobs:
 
     if: github.event_name == 'push' || github.event_name == 'pull_request'
 
-    runs-on: ubuntu-18.04
+    # runs-on: ubuntu-18.04
+    runs-on: self-hosted
     timeout-minutes: 30
 
     steps:
@@ -52,29 +53,22 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: opaleye-debug
-        path: ${{ github.workspace }}/opaleye-*.deb
-
-    - name: Upload debug artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: opaleye-debug
-        path: ${{ github.workspace }}/sha256.txt
+        path: |
+          ${{ github.workspace }}/opaleye-*.deb
+          ${{ github.workspace }}/sha256.txt
 
     - name: Upload release artifacts
       uses: actions/upload-artifact@v2
       with:
         name: opaleye-release
-        path: ${{ github.workspace }}/opaleye-*.deb
-
-    - name: Upload release artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: opaleye-release
-        path: ${{ github.workspace }}/sha256.txt
+        path: |
+          ${{ github.workspace }}/opaleye-*.deb
+          ${{ github.workspace }}/sha256.txt
 
   release:
 
-    runs-on: ubuntu-18.04
+    # runs-on: ubuntu-18.04
+    runs-on: self-hosted
     timeout-minutes: 30
     
     needs: build
