--- a/continuous_integration/ubuntu-20.04/Dockerfile
+++ b/continuous_integration/ubuntu-20.04/Dockerfile
@@ -2,17 +2,14 @@ FROM ubuntu:20.04
 
 # RUN echo "Acquire::http::Proxy \"http://helios10g.lan:3142\";" > /etc/apt/apt.conf.d/02proxy
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y \ 
-	tzdata               \ 
-	&& apt-get clean
-
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
 	build-essential      \
-	wget                 \
 	cmake                \
 	git                  \
 	rsync                \
 	software-properties-common \ 
+	tzdata               \ 
+	wget                 \
 	&& apt-get clean
 
 RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/cuda-ubuntu2004.pin -O /etc/apt/preferences.d/cuda-repository-pin-600
@@ -24,7 +21,7 @@ RUN echo "deb https://repo.download.nvidia.com/jetson/common r32.2 main" >> /etc
 # RUN echo "deb https://repo.download.nvidia.com/jetson/t194 r32.2 main" >> /etc/apt/sources.list.d/jetson-multimedia.list
 
 
-UN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
 	device-tree-compiler \
 	gdb                  \
 	grunt                \
