refactor, v4l2 level api & test added

--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -15,13 +15,16 @@ target_link_libraries(camera-pipes-nv
 add_library(camera-pipes
 	#cameras/Logitech_brio.cpp
 	#cameras/UVC_base.cpp
+	cameras/Alvium_v4l2.cpp
+
+	util/v4l2_util.cpp
 
 	#pipeline/camera/Logitech_brio_pipe.cpp
 	#pipeline/camera/Logitech_C525_gst.cpp
 	pipeline/camera/nvac_imx219_pipe.cpp
 	pipeline/camera/Testsrc_pipe.cpp
-	pipeline/camera/V4L2_alvium_pipe
-	pipeline/camera/v4l2_util.cpp
+	#pipeline/camera/V4L2_alvium_pipe.cpp
+	#pipeline/camera/V4L2src_alvium_pipe.cpp
 	pipeline/camera/V4L2_webcam_pipe.cpp
 
 	pipeline/display/autovideosink_pipe.cpp
