--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,14 @@
 
+
+add_executable(alvium_test
+	alvium_test.cpp
+)
+
+target_link_libraries(alvium_test
+	PUBLIC
+		opaleye_app
+)
+
 add_executable(opaleye_config_test
 	opaleye_config_test.cpp
 )
@@ -16,6 +26,7 @@ target_include_directories(opaleye_config_test
 INSTALL(
 	TARGETS
 		opaleye_config_test
+		alvium_test
 	DESTINATION
 		bin
 )
