--- a/opaleye/CMakeLists.txt
+++ b/opaleye/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library(opaleye_app
 	http_req_callback_sensors.cpp
 
 	sensor_thread.cpp
-	# gpio_thread.cpp
+	gpio_thread.cpp
 
 	signal_handler.cpp
 )
@@ -49,6 +49,7 @@ target_link_libraries(opaleye_app
 
 		#uvc
 		fcgi
+		gpiod
 
 		rt
 )
