bast gst pipe on new v4l and appsrc

--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -25,7 +25,7 @@ add_library(camera-pipes
 	#pipeline/camera/Logitech_C525_gst.cpp
 	pipeline/camera/nvac_imx219_pipe.cpp
 	pipeline/camera/Testsrc_pipe.cpp
-	#pipeline/camera/V4L2_alvium_pipe.cpp
+	pipeline/camera/V4L2_alvium_pipe.cpp
 	#pipeline/camera/V4L2src_alvium_pipe.cpp
 	pipeline/camera/V4L2_webcam_pipe.cpp
 
