--- a/continuous_integration/ubuntu-20.04/Dockerfile
+++ b/continuous_integration/ubuntu-20.04/Dockerfile
@@ -18,7 +18,7 @@ RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86
 	rm cuda-keyring_1.0-1_all.deb
 RUN add-apt-repository "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/ /"
 
-RUN echo "deb https://repo.download.nvidia.com/jetson/common r32.2 main" >> /etc/apt/sources.list.d/jetson-multimedia.repo
+# RUN echo "deb https://repo.download.nvidia.com/jetson/common r32.2 main" >> /etc/apt/sources.list.d/jetson-multimedia.repo
 # RUN echo "deb https://repo.download.nvidia.com/jetson/t194 r32.2 main" >> /etc/apt/sources.list.d/jetson-multimedia.list
 
 
@@ -73,12 +73,3 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 	&& apt-get clean
 
 WORKDIR /root
-RUN git clone https://github.com/suburbanmarine/opaleye
-
-WORKDIR /root/opaleye
-RUN git checkout docker_build
-RUN git submodule update --init --recursive
-RUN ./generate_cmake_x86.sh
-
-WORKDIR /root/opaleye/build/debug
-RUN make -j`nproc`
