--- a/opaleye/CMakeLists.txt
+++ b/opaleye/CMakeLists.txt
@@ -38,7 +38,7 @@ target_link_libraries(opaleye_app
 		camera-pipes-nv
 		http-bridge
 		opaleye_sensors
-		opaleye_util
+		opaleye-util
 
 		jsonrpc-lean
 
