tweak property lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ add_subdirectory(libs/http-bridge)
 add_subdirectory(libs/hal)
 add_subdirectory(libs/sensors)
 add_subdirectory(libs/opaleye-util)
+add_subdirectory(libs/property)
 add_subdirectory(opaleye)
 add_subdirectory(site)
 add_subdirectory(tests)
