--- a/libs/property/CMakeLists.txt
+++ b/libs/property/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_library(property
 	Property_base.cpp
 	Property.cpp
+	Property_enum.cpp
+	Property_numeric.cpp
+	Property_text.cpp
+
 )
 
 target_include_directories(property
