draft of a factory, draft of a format dispatch func

--- a/libs/property/CMakeLists.txt
+++ b/libs/property/CMakeLists.txt
@@ -5,9 +5,17 @@ add_library(property
 	Property_numeric.cpp
 	Property_text.cpp
 
+	Property_factory.cpp
+
 )
 
 target_include_directories(property
 	PUBLIC
 		${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+target_link_libraries(property
+	Boost::boost
+
+	opaleye-util
 )
