ip props, comparators

--- a/libs/property/CMakeLists.txt
+++ b/libs/property/CMakeLists.txt
@@ -4,6 +4,8 @@ add_library(property
 	Property_enum.cpp
 	Property_numeric.cpp
 	Property_text.cpp
+	Property_ipv4_endpoint.cpp
+	Property_ipv6_endpoint.cpp
 
 	Property_factory.cpp
 
