--- a/continuous_integration/ubuntu-22.04/Dockerfile
+++ b/continuous_integration/ubuntu-22.04/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:22.04
 
-RUN echo "Acquire::http::Proxy \"http://helios10g.lan:3142\";" > /etc/apt/apt.conf.d/02proxy
+RUN echo "Acquire::http::Proxy \"http://helios.lan:3142\";" > /etc/apt/apt.conf.d/02proxy
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
 	build-essential      \
@@ -12,18 +12,19 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 	wget                 \
 	&& apt-get clean
 
-WORKDIR /tmp
-RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.0-1_all.deb && \
-	dpkg -i cuda-keyring_1.0-1_all.deb && \
-	rm cuda-keyring_1.0-1_all.deb
-RUN add-apt-repository "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/ /"
-
+# WORKDIR /tmp
+# RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.0-1_all.deb && \
+#	dpkg -i cuda-keyring_1.0-1_all.deb && \
+#	rm cuda-keyring_1.0-1_all.deb
+# RUN add-apt-repository "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/ /"
 
 # RUN echo "deb https://repo.download.nvidia.com/jetson/common r32.2 main" >> /etc/apt/sources.list.d/jetson-multimedia.repo
 # RUN echo "deb https://repo.download.nvidia.com/jetson/t194 r32.2 main" >> /etc/apt/sources.list.d/jetson-multimedia.list
 
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
+	default-jdk-headless \
+	default-jre-headless \
 	device-tree-compiler \
 	gdb                  \
 	grunt                \
@@ -32,13 +33,17 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 	node-grunt-cli       \
 	nodejs               \
 	npm                  \
+	python-is-python3    \
+	python3              \
 	valgrind             \
+	zip                  \
 	&& apt-get clean
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
 	googletest             \ 
 	i2c-tools              \ 
 	libboost-all-dev       \ 
+	libelf-dev             \ 
 	libfcgi-dev            \ 
 	libgpiod-dev           \ 
 	libgrpc++-dev          \ 
@@ -77,9 +82,17 @@ WORKDIR /root
 RUN git clone https://github.com/suburbanmarine/opaleye
 
 WORKDIR /root/opaleye
-RUN git checkout docker_build
+RUN git checkout master
 RUN git submodule update --init --recursive
-RUN ./generate_cmake_x86.sh
 
+WORKDIR /root
+RUN git clone https://github.com/suburbanmarine/zcm.git
+WORKDIR /root/zcm
+RUN git checkout patch_installer
+ARG CXXFLAGS=-std=c++11
+RUN ./scripts/make_debian_package.sh
+
+WORKDIR /root/opaleye
+RUN ./generate_cmake_x86.sh
 WORKDIR /root/opaleye/build/debug
 RUN make -j`nproc`
