install zcm in ci

--- a/continuous_integration/ubuntu-22.04/Dockerfile
+++ b/continuous_integration/ubuntu-22.04/Dockerfile
@@ -89,8 +89,8 @@ WORKDIR /root
 RUN git clone https://github.com/suburbanmarine/zcm.git
 WORKDIR /root/zcm
 RUN git checkout patch_installer
-ARG CXXFLAGS=-std=c++11
 RUN ./scripts/make_debian_package.sh
+RUN gdebi -n /root/zcm/build/zcm_1.1.5_amd64.deb
 
 WORKDIR /root/opaleye
 RUN ./generate_cmake_x86.sh
