--- a/continuous_integration/ubuntu-22.04/Dockerfile
+++ b/continuous_integration/ubuntu-22.04/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:22.04
 
-RUN echo "Acquire::http::Proxy \"http://helios.lan:3142\";" > /etc/apt/apt.conf.d/02proxy
+# RUN echo "Acquire::http::Proxy \"http://helios.lan:3142\";" > /etc/apt/apt.conf.d/02proxy
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
 	build-essential      \
