--- a/continuous_integration/ubuntu-20.04/Dockerfile
+++ b/continuous_integration/ubuntu-20.04/Dockerfile
@@ -5,11 +5,13 @@ FROM ubuntu:20.04
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \ 
 	build-essential      \
 	cmake                \
+	gdebi                \
 	git                  \
 	rsync                \
 	software-properties-common \ 
 	tzdata               \ 
 	wget                 \
+	zip                  \
 	&& apt-get clean
 
 # WORKDIR /tmp
