build test code

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,17 @@ target_include_directories(opaleye_config_test
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
 
+add_executable(opaleye_zcm_cli_test
+	opaleye_zcm_cli_test.cpp
+)
+
+target_link_libraries(opaleye_zcm_cli_test
+	PUBLIC
+		opaleye_app
+
+		zcm
+)
+
 add_executable(opaleye_zeromq_cli_test
 	opaleye_zeromq_cli_test.cpp
 )
