build release too

--- a/continuous_integration/ubuntu-18.04/Dockerfile
+++ b/continuous_integration/ubuntu-18.04/Dockerfile
@@ -97,3 +97,7 @@ RUN ./generate_cmake_x86.sh
 WORKDIR /root/opaleye/build/debug
 RUN make -j`nproc`
 RUN make package
+
+WORKDIR /root/opaleye/build/release
+RUN make -j`nproc`
+RUN make package
