--- a/libs/camera-pipes/CMakeLists.txt
+++ b/libs/camera-pipes/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(camera-pipes
 	#pipeline/camera/Logitech_brio_pipe.cpp
 	#pipeline/camera/Logitech_C525_gst.cpp
 	pipeline/camera/GST_camera_base.cpp
+	pipeline/camera/nvac_imx183_pipe.cpp
 	pipeline/camera/nvac_imx219_pipe.cpp
 	pipeline/camera/Testsrc_pipe.cpp
 	pipeline/camera/V4L2_alvium_pipe.cpp
