--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ find_package( OpenCV REQUIRED )
 add_subdirectory(external/spdlog)
 add_subdirectory(external/googletest)
 # add_subdirectory(external/nvidia-jetpack)
-
+add_subdirectory(idl/zcm)
 
 add_library(cppzmq INTERFACE)
 target_include_directories(cppzmq
