--- a/idl/zcm/CMakeLists.txt
+++ b/idl/zcm/CMakeLists.txt
@@ -1,19 +1,19 @@
 function(gen_zcm_idl BASENAME)
-	list(APPEND GENERATED_HEADER_FILES ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.hpp)
+	list(APPEND GENERATED_HEADER_FILES ${CMAKE_CURRENT_BINARY_DIR}/idl/zcm/${BASENAME}.hpp)
 	list(APPEND GENERATED_SOURCE_FILES ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cpp)
 	
 	set(GENERATED_HEADER_FILES ${GENERATED_HEADER_FILES} PARENT_SCOPE)
 	set(GENERATED_SOURCE_FILES ${GENERATED_SOURCE_FILES} PARENT_SCOPE)
 
-	FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cpp "#include \"${BASENAME}.hpp\"")
+	FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cpp "#include \"idl/zcm/${BASENAME}.hpp\"")
 
 	add_custom_command(
 		DEPENDS
 			${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.zcm
 		OUTPUT 
-			${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.hpp
+			${CMAKE_CURRENT_BINARY_DIR}/idl/zcm/${BASENAME}.hpp
 	    COMMAND
-	    	zcm-gen -x ${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.zcm 
+	    	zcm-gen -x --cpp-hpath idl/zcm ${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.zcm 
 	    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 			VERBATIM
 	)
