use custom file instead

--- a/idl/zcm/CMakeLists.txt
+++ b/idl/zcm/CMakeLists.txt
@@ -5,8 +5,6 @@ function(gen_zcm_idl BASENAME)
 	set(GENERATED_HEADER_FILES ${GENERATED_HEADER_FILES} PARENT_SCOPE)
 	set(GENERATED_SOURCE_FILES ${GENERATED_SOURCE_FILES} PARENT_SCOPE)
 
-	FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cpp "#include \"idl/zcm/${BASENAME}.hpp\"")
-
 	add_custom_command(
 		DEPENDS
 			${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.zcm
@@ -14,6 +12,17 @@ function(gen_zcm_idl BASENAME)
 			${CMAKE_CURRENT_BINARY_DIR}/idl/zcm/${BASENAME}.hpp
 	    COMMAND
 	    	zcm-gen -x --cpp-hpath idl/zcm ${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.zcm 
+	    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+			VERBATIM
+	)
+
+	add_custom_command(
+		DEPENDS
+			${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.zcm
+		OUTPUT 
+			${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cpp
+	    COMMAND
+	    	echo "#include \"idl/zcm/${BASENAME}.hpp\"" > ${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cpp
 	    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 			VERBATIM
 	)
