--- a/idl/zcm/CMakeLists.txt
+++ b/idl/zcm/CMakeLists.txt
@@ -29,7 +29,7 @@ function(gen_zcm_idl BASENAME)
 
 endfunction()
 
-gen_zcm_idl(raw_frame_t)
+gen_zcm_idl(image_buffer_t)
 gen_zcm_idl(heartbeat_t)
 
 add_library(opaleye-zcm-idl SHARED
